<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_20220319_054431_0000"
    tools:context=".Order_Dolpin">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="430dp"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price_dis"
        android:layout_width="106dp"
        android:layout_height="34dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/price_dis"
        android:text="550/-"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="106dp"
        android:layout_height="34dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/textView8"
        android:text="200/-"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/delievery"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/delievery"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/delievery"
        android:text="Delivery charges"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:hint="@string/price"
        android:text="Price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delievery"
        app:layout_constraintEnd_toStartOf="@+id/price_dis"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheese_kottu2" />

    <TextView
        android:id="@+id/Cheese_kottu"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amarante"
        android:hint="@string/Dolpin_kottu"
        android:text="Dolpin Kottu"
        android:textAlignment="center"
        android:textColor="#F4EFEF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cheese_kottu2"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:layout_marginTop="344dp"
        android:fontFamily="@font/amarante"
        android:hint="@string/Chicke_kottu2"
        android:text="Dolpin Kottu"
        android:textAlignment="center"
        android:textColor="#191818"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_Positive"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="68dp"
        android:backgroundTint="@color/white"
        android:hint="@string/add_Positive"
        android:text="+"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/negative"
        android:layout_width="51dp"
        android:layout_height="42dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="68dp"
        android:backgroundTint="#FAF5F5"
        android:hint="@string/negative"
        android:text="-"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginBottom="116dp"
        android:background="#FAF7F7"
        android:hint="@string/textView9"
        android:text="Total "
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FAF7F7"
        android:hint="@string/textView11"
        android:text="750/-"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buy"
        android:layout_width="135dp"
        android:layout_height="34dp"
        android:background="#FFD12A"
        android:hint="@string/buy"
        android:text="Buy Now"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toEndOf="@+id/button8"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="123dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="62dp"
        android:background="#FFD12A"
        android:hint="@string/cart"
        android:text="Add to Cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        app:srcCompat="@drawable/png_1" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        app:srcCompat="@drawable/png_2" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        app:srcCompat="@drawable/png_3" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991"
        app:srcCompat="@drawable/png_4" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/png_5" />

</androidx.constraintlayout.widget.ConstraintLayout>