<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_20220319_140023_0000"
    android:textAlignment="center"
    tools:context=".Conform_Order">

    <TextView
        android:id="@+id/Bcard_details"
        android:layout_width="166dp"
        android:layout_height="29dp"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/Bcard_details"
        android:text="**** **** **** ****"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/address_head"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="409dp"
        android:layout_height="44dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Total"
        app:layout_constraintVertical_bias="0.957" />

    <TextView
        android:id="@+id/address_head"
        android:layout_width="166dp"
        android:layout_height="29dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/address_head"
        android:text="My Address"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/payment_head"
        android:layout_width="166dp"
        android:layout_height="29dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/payment_head"
        android:text="Payment Details"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Bcard_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cheese_kottu4"
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:hint="@string/Chicke_kottu"
        android:text="Chicken kottu"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/prices5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conform_heder"
        app:layout_constraintVertical_bias="0.386" />

    <TextView
        android:id="@+id/price_dis4"
        android:layout_width="52dp"
        android:layout_height="25dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/price_dis"
        android:text="600/-"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/prices5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/prices5"
        android:layout_width="52dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/price"
        android:text="Price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/date4"
        app:layout_constraintEnd_toStartOf="@+id/price_dis4"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date4"
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/Date"
        android:text="20/03/2022"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/payment_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/conform_heder"
        android:layout_width="292dp"
        android:layout_height="62dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/conform_heder"
        android:text="Conform Order"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/png_1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:srcCompat="@drawable/png_2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/png_3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/png_5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:srcCompat="@drawable/png_4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="362dp"
        android:layout_height="25dp"
        android:layout_marginBottom="54dp"
        android:hint="@string/address"
        android:text="528/A,Avissawella Rd,Kosgama"
        app:layout_constraintBottom_toTopOf="@+id/Total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Total"
        android:layout_width="159dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:hint="@string/Total"
        android:text="TOTAL- 800/-"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Order_con"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Order_con"
        android:layout_width="135dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        android:background="#FFD12A"
        android:hint="@string/Order_con"
        android:text="Conform Order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.657"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="46dp"
        android:layout_height="29dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/png8"
        app:layout_constraintBottom_toTopOf="@+id/address_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toEndOf="@+id/Bcard_details" />

</androidx.constraintlayout.widget.ConstraintLayout>
