<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_20220319_054814_0000"
    tools:context=".Order_chicken">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="430dp"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Total"
        app:layout_constraintVertical_bias="0.957" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/png_1" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:srcCompat="@drawable/png_3" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:srcCompat="@drawable/png_4" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="38dp"
        android:layout_height="42dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/png_5" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="36dp"
        android:layout_height="44dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:srcCompat="@drawable/png_2" />

    <TextView
        android:id="@+id/price_dis"
        android:layout_width="106dp"
        android:layout_height="34dp"
        android:layout_marginEnd="76dp"
        android:hint="@string/price_dis"
        android:text="600/-"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="106dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/textView8"
        android:text="200/-"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/delievery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/delievery" />

    <TextView
        android:id="@+id/price"
        android:layout_width="107dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/price"
        android:text="Price"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delievery"
        app:layout_constraintEnd_toStartOf="@+id/price_dis"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheese_kottu2"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/delievery"
        android:layout_width="149dp"
        android:layout_height="34dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/delievery"
        android:text="Delivery charges"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Cheese_kottu"
        android:layout_width="226dp"
        android:layout_height="45dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/amarante"
        android:hint="@string/Chicke_kottu"
        android:text="Chicken Kottu"
        android:textAlignment="center"
        android:textColor="#F4EFEF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cheese_kottu2"
        android:layout_width="203dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="352dp"
        android:fontFamily="@font/amarante"
        android:hint="@string/Chicke_kottu2"
        android:text="Chicken Kottu"
        android:textAlignment="center"
        android:textColor="#191818"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="58dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cheese_kottu"
        app:layout_constraintVertical_bias="0.463" />

    <Button
        android:id="@+id/add_Positive"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/white"
        android:hint="@string/add_Positive"
        android:text="+"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="334dp" />

    <Button
        android:id="@+id/negative"
        android:layout_width="51dp"
        android:layout_height="42dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#FAF5F5"
        android:hint="@string/negative"
        android:text="-"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="368dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:background="#FAF7F7"
        android:hint="@string/textView9"
        android:text="Total "
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FAF7F7"
        android:hint="@string/textView11"
        android:text="800/-"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <Button
        android:id="@+id/buy"
        android:layout_width="135dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:background="#FFD12A"
        android:hint="@string/buy"
        android:text="Buy Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="123dp"
        android:layout_height="32dp"
        android:layout_marginBottom="80dp"
        android:background="#FFD12A"
        android:hint="@string/cart"
        android:text="Add to Cart"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/buy"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
